--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# The following enables container-based travis instances
+sudo: false
+
 git:
   submodules: false
 
@@ -5,14 +8,20 @@ env:
  - DEBUG_STAGE2=YES
  - DEBUG_STAGE2=NO
 
+addons:
+  apt:
+    sources:
+    - hvr-ghc
+    - llvm-toolchain-precise-3.6
+    - ubuntu-toolchain-r-test
+    packages:
+    - cabal-install-1.18
+    - ghc-7.6.3
+    - alex-3.1.3
+    - happy-1.19.4
+    - llvm-3.6
+
 before_install:
- - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
- - travis_retry sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
- - travis_retry sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main' >> /etc/apt/sources.list"
- - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
- - travis_retry sudo apt-get -q update
- - travis_retry sudo apt-get -q install cabal-install-1.18 ghc-7.6.3 alex-3.1.3 happy-1.19.4
- - travis_retry sudo apt-get -q install llvm-3.6
  - export PATH=/opt/ghc/7.6.3/bin:/opt/cabal/1.18/bin:/opt/alex/3.1.3/bin:/opt/happy/1.19.4/bin:/usr/lib/llvm-3.6/bin:$PATH
 
 # Be explicit about which protocol to use, such that we don't have to repeat the rewrite command for each.
@@ -29,10 +38,6 @@ before_install:
  - git submodule init # Don't be quiet, we want to show these urls.
  - git submodule --quiet update --recursive # Now we can be quiet again.
 
-install:
-# - sudo apt-get update
-# - sudo apt-get install haskell-platform autoconf libtool make ncurses-dev g++ dblatex docbook-xsl docbook-utils
-# - cabal update
 script:
  # do  not build docs
  - echo 'HADDOCK_DOCS       = NO' >> mk/validate.mk
