--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -55,9 +55,8 @@ tmp.d
 *.so
 *bindisttest_install___dir_bin_ghc.mk
 *bindisttest_install___dir_bin_ghc.exe.mk
-mk/ghcconfig*_inplace_bin_ghc-stage1.mk
-mk/ghcconfig*_inplace_bin_ghc-stage2.mk
-mk/ghcconfig*_inplace_bin_ghc-stage2.exe.mk
+mk/ghcconfig*_bin_ghc-*.mk
+mk/ghcconfig*_bin_ghc-*.exe.mk
 *.imports
 
 # -----------------------------------------------------------------------------
