--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ script:
  # do not build dynamic libraries
  - echo 'DYNAMIC_GHC_PROGRAMS = NO' >> mk/validate.mk
  - echo 'GhcLibWays = v' >> mk/validate.mk
- - if [ "$DEBUG_STAGE" = "YES" ]; then echo 'GhcStage2HcOpts += -DDEBUG' >> mk/validate.mk; fi
+ - if [ "$DEBUG_STAGE2" = "YES" ]; then echo 'GhcStage2HcOpts += -DDEBUG' >> mk/validate.mk; fi
  # Don't use --quiet, as it might cause the testsuite to not print output for
  # over 10 minutes, causing Travis to kill our job.
  - CPUS=2 SKIP_PERF_TESTS=YES ./validate --fast
