Add NOINLINE for hs-boot functions
This fixes Trac #10083.

The key change is in TcBinds.tcValBinds, where we construct
the prag_fn.  With this patch we add a NOINLINE pragma for
any functions that were exported by the hs-boot file for this
module.

See Note [Inlining and hs-boot files], and #10083, for details.

The commit touches several other files becuase I also changed the
representation of the "pragma function" from a function TcPragFun
to an environment, TcPragEnv. This makes it easer to extend
during construction.

--- a/testsuite/tests/simplCore/should_compile/Makefile
+++ b/testsuite/tests/simplCore/should_compile/Makefile
@@ -126,3 +126,9 @@ T8221:
 T5996:
 	$(RM) -f T5996.o T5996.hi
 	'$(TEST_HC)' $(TEST_HC_OPTS) -O -c T5996.hs -ddump-simpl -dsuppress-uniques -dsuppress-all | grep y2
+
+T10083:
+	$(RM) -f T10083.o T10083.hi T10083.hi-boot T10083a.o T10083a.hi 
+	'$(TEST_HC)' $(TEST_HC_OPTS) -c -O T10083.hs-boot
+	'$(TEST_HC)' $(TEST_HC_OPTS) -c -O T10083a.hs
+	'$(TEST_HC)' $(TEST_HC_OPTS) -c -O T10083.hs
