Validate: explain THREADS instead of CPUS in --help

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,4 +50,4 @@ script:
  - if [ "$DEBUG_STAGE2" = "YES" ]; then echo 'GhcStage2HcOpts += -DDEBUG' >> mk/validate.mk; fi
  # Don't use --quiet, as it might cause the testsuite to not print output for
  # over 10 minutes, causing Travis to kill our job.
- - CPUS=2 SKIP_PERF_TESTS=YES ./validate --fast
+ - THREADS=3 SKIP_PERF_TESTS=YES ./validate --fast
