Travis: do pass `--quiet` to validate
It's failing at the moment with "The log length has exceeded the limit
of 4 Megabytes".

We don't seem to have periods of >10 minutes without output after all,
which was the initial reason of not using `--quiet`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,4 @@ script:
  - echo 'DYNAMIC_GHC_PROGRAMS = NO' >> mk/validate.mk
  - echo 'GhcLibWays = v' >> mk/validate.mk
  - if [ "$DEBUG_STAGE2" = "YES" ]; then echo 'GhcStage2HcOpts += -DDEBUG' >> mk/validate.mk; fi
- # Don't use --quiet, as it might cause the testsuite to not print output for
- # over 10 minutes, causing Travis to kill our job.
- - THREADS=3 SKIP_PERF_TESTS=YES ./validate --fast
+ - THREADS=3 SKIP_PERF_TESTS=YES ./validate --fast --quiet
