--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -1221,6 +1221,7 @@ mk/ghcconfig*_bin_ghc-*.exe.mk
 /tests/polykinds/PolyKinds10
 /tests/primops/should_run/T6135
 /tests/primops/should_run/T7689
+/tests/primops/should_run/T10481
 /tests/profiling/should_compile/prof001
 /tests/profiling/should_compile/prof002
 /tests/profiling/should_run/2592
