--- a/.gitmodules
+++ b/.gitmodules
@@ -1,117 +1,117 @@
 [submodule "libraries/binary"]
 	path = libraries/binary
-	url = git://git.haskell.org/packages/binary.git
+	url = ../packages/binary.git
 	ignore = untracked
 [submodule "libraries/bytestring"]
 	path = libraries/bytestring
-	url = git://git.haskell.org/packages/bytestring.git
+	url = ../packages/bytestring.git
 	ignore = untracked
 [submodule "libraries/Cabal"]
 	path = libraries/Cabal
-	url = git://git.haskell.org/packages/Cabal.git
+	url = ../packages/Cabal.git
 	ignore = untracked
 [submodule "libraries/containers"]
 	path = libraries/containers
-	url = git://git.haskell.org/packages/containers.git
+	url = ../packages/containers.git
 	ignore = untracked
 [submodule "libraries/haskeline"]
 	path = libraries/haskeline
-	url = git://git.haskell.org/packages/haskeline.git
+	url = ../packages/haskeline.git
 	ignore = untracked
 [submodule "libraries/pretty"]
 	path = libraries/pretty
-	url = git://git.haskell.org/packages/pretty.git
+	url = ../packages/pretty.git
 	ignore = untracked
 [submodule "libraries/terminfo"]
 	path = libraries/terminfo
-	url = git://git.haskell.org/packages/terminfo.git
+	url = ../packages/terminfo.git
 	ignore = untracked
 [submodule "libraries/transformers"]
 	path = libraries/transformers
-	url = git://git.haskell.org/packages/transformers.git
+	url = ../packages/transformers.git
 	ignore = untracked
 [submodule "libraries/xhtml"]
 	path = libraries/xhtml
-	url = git://git.haskell.org/packages/xhtml.git
+	url = ../packages/xhtml.git
 	ignore = untracked
 [submodule "libraries/Win32"]
 	path = libraries/Win32
-	url = git://git.haskell.org/packages/Win32.git
+	url = ../packages/Win32.git
 	ignore = untracked
 [submodule "libraries/primitive"]
 	path = libraries/primitive
-	url = git://git.haskell.org/packages/primitive.git
+	url = ../packages/primitive.git
 	ignore = untracked
 [submodule "libraries/vector"]
 	path = libraries/vector
-	url = git://git.haskell.org/packages/vector.git
+	url = ../packages/vector.git
 	ignore = untracked
 [submodule "libraries/time"]
 	path = libraries/time
-	url = git://git.haskell.org/packages/time.git
+	url = ../packages/time.git
 	ignore = untracked
 [submodule "libraries/random"]
 	path = libraries/random
-	url = git://git.haskell.org/packages/random.git
+	url = ../packages/random.git
 	ignore = untracked
 [submodule "libraries/array"]
 	path = libraries/array
-	url = git://git.haskell.org/packages/array.git
+	url = ../packages/array.git
 	ignore = none
 [submodule "libraries/deepseq"]
 	path = libraries/deepseq
-	url = git://git.haskell.org/packages/deepseq.git
+	url = ../packages/deepseq.git
 	ignore = none
 [submodule "libraries/directory"]
 	path = libraries/directory
-	url = git://git.haskell.org/packages/directory.git
+	url = ../packages/directory.git
 	ignore = none
 [submodule "libraries/filepath"]
 	path = libraries/filepath
-	url = git://git.haskell.org/packages/filepath.git
+	url = ../packages/filepath.git
 	ignore = none
 [submodule "libraries/hoopl"]
 	path = libraries/hoopl
-	url = git://git.haskell.org/packages/hoopl.git
+	url = ../packages/hoopl.git
 	ignore = none
 [submodule "libraries/hpc"]
 	path = libraries/hpc
-	url = git://git.haskell.org/packages/hpc.git
+	url = ../packages/hpc.git
 	ignore = none
 [submodule "libraries/process"]
 	path = libraries/process
-	url = git://git.haskell.org/packages/process.git
+	url = ../packages/process.git
 	ignore = none
 [submodule "libraries/unix"]
 	path = libraries/unix
-	url = git://git.haskell.org/packages/unix.git
+	url = ../packages/unix.git
 	ignore = none
 [submodule "libraries/parallel"]
 	path = libraries/parallel
-	url = git://git.haskell.org/packages/parallel.git
+	url = ../packages/parallel.git
 	ignore = none
 [submodule "libraries/stm"]
 	path = libraries/stm
-	url = git://git.haskell.org/packages/stm.git
+	url = ../packages/stm.git
 	ignore = none
 [submodule "libraries/dph"]
 	path = libraries/dph
-	url = git://git.haskell.org/packages/dph.git
+	url = ../packages/dph.git
 	ignore = none
 [submodule "utils/haddock"]
 	path = utils/haddock
-	url = git://git.haskell.org/haddock.git
+	url = ../haddock.git
 	ignore = none
 	branch = ghc-head
 [submodule "nofib"]
 	path = nofib
-	url = git://git.haskell.org/nofib.git
+	url = ../nofib.git
 	ignore = none
 [submodule "utils/hsc2hs"]
 	path = utils/hsc2hs
-	url = git://git.haskell.org/hsc2hs.git
+	url = ../hsc2hs.git
 	ignore = none
 [submodule "libffi-tarballs"]
 	path = libffi-tarballs
-	url = git://git.haskell.org/libffi-tarballs.git
+	url = ../libffi-tarballs.git
 	ignore = none
