--- a/mk/project.mk.in
+++ b/mk/project.mk.in
@@ -135,23 +135,18 @@ exeext3=@exeext_target@
 soext=@soext_target@
 
 # Windows_Host=YES if on a Windows platform
-ifneq "$(findstring $(HostOS_CPP), mingw32 cygwin32)" ""
+ifneq "$(findstring $(HostOS_CPP), mingw32)" ""
 Windows_Host=YES
 else
 Windows_Host=NO
 endif
 
 # Windows_Target=YES if we are targetting a Windows platform
-ifneq "$(findstring $(TargetOS_CPP), mingw32 cygwin32)" ""
+ifneq "$(findstring $(TargetOS_CPP), mingw32)" ""
 Windows_Target=YES
 else
 Windows_Target=NO
 endif
-
-# Tell the build system what the host operating system is
-# This distinguishes "msys" and "cygwin", which are not
-# not distinguished by HOST_OS_CPP
-OSTYPE=@OSTYPE@
 
 # In case of Solaris OS, does it provide broken shared libs
 # linker or not?
