Build system: delete the InstallExtraPackages variable
Just install all packages that are built. Don't make an exception for
the dph and extra packages.

You can control whether the dph and extra packages should be build using
the variables BUILD_DPH and BUILD_EXTRA_PKGS. These variables didn't
exist before. But now that they do, InstallExtraPackages isn't really
needed anymore.

Reviewed by: austin

Differential Revision: https://phabricator.haskell.org/D1227

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -302,12 +302,6 @@ SupportsSplitObjs := $(strip \
 SplitObjs=$(SupportsSplitObjs)
 
 # ----------------------------------------------------------------------------
-# Package-related things
-
-# Whether to install the extra packages
-InstallExtraPackages = NO
-
-# ----------------------------------------------------------------------------
 
 # There are a number of things which technically depend on GHC (e.g. if
 # ghc changes then Haskell files may be compiled differently, or Cabal
@@ -768,9 +762,9 @@ else
 HSCOLOUR_SRCS = YES
 endif
 
-# Build DPH?
+# Build and install DPH?
 BUILD_DPH = NO
-# Build the "extra" packages (see ./packages)?
+# Build and install the "extra" packages (see ./packages)?
 BUILD_EXTRA_PKGS = NO
 
 ################################################################################
