Build system: check for inconsistent settings (#10157)
`configure` currently detects when the docbook and hscolour tools aren't
available, and instead of failing outright (as it does for missing alex
and happy), sets some variables in mk/config.mk to tell `make` not to
build the documentation.

Sometimes, however, you want to really make sure all documentation gets
built, fully colourized. For example when making a release. To do so,
you can override the mentioned variables from mk/config.mk in
mk/build.mk (e.g. set HSCOLOUR_SRCS=YES).

This patch adds some error checking to make sure that doing so will not
result in weird build failures when those tools are still missing.

Test Plan: ran `make` a couple of times, with different mk/config.mk settings.

Reviewed by: austin

Differential Revision: https://phabricator.haskell.org/D1232

--- a/configure.ac
+++ b/configure.ac
@@ -1199,9 +1199,9 @@ echo ["\
 fi
 
 echo ["\
-   Building DocBook HTML documentation : $BUILD_DOCBOOK_HTML
-   Building DocBook PS documentation   : $BUILD_DOCBOOK_PS
-   Building DocBook PDF documentation  : $BUILD_DOCBOOK_PDF"]
+   Can build DocBook HTML documentation : $BUILD_DOCBOOK_HTML
+   Can build DocBook PS documentation   : $BUILD_DOCBOOK_PS
+   Can build DocBook PDF documentation  : $BUILD_DOCBOOK_PDF"]
 
 echo ["----------------------------------------------------------------------
 "]
