--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -613,6 +613,9 @@ mk/ghcconfig*_bin_ghc*.exe.mk
 /tests/driver/recomp012/Main
 /tests/driver/recomp012/Main.hs
 /tests/driver/recomp012/MyBool.hs
+/tests/driver/recomp013/A.hs
+/tests/driver/recomp013/B.hs
+/tests/driver/recomp013/C.hs
 /tests/driver/recomp014/A.hs
 /tests/driver/recomp014/A1.hs
 /tests/driver/recomp014/B.hsig
