--- a/testsuite/tests/typecheck/bug1465/Makefile
+++ b/testsuite/tests/typecheck/bug1465/Makefile
@@ -28,6 +28,6 @@ prep:
 
 prep.%:
 	cd $* && '$(TEST_HC)' -v0 --make -o setup Setup.hs
-	cd $* && ./setup configure $(CABAL_MINIMAL_BUILD) -v0 --with-compiler='$(TEST_HC)' --with-ghc-pkg='$(GHC_PKG)' --package-db ../$(LOCAL_PKGCONF)
+	cd $* && ./setup configure $(CABAL_MINIMAL_BUILD) -v0 --with-compiler='$(TEST_HC)' --with-ghc-pkg='$(GHC_PKG)' --ghc-options='$(TEST_HC_OPTS)' --package-db ../$(LOCAL_PKGCONF)
 	cd $* && ./setup build -v0
 	cd $* && ./setup register -v0 --inplace
