Add generatePackageCode rule, alexArgs, happyArgs and Hsc2Hs builder.

--- a/cfg/system.config.in
+++ b/cfg/system.config.in
@@ -19,6 +19,8 @@ ghc-cabal      = @hardtop@/inplace/bin/ghc-cabal
 
 haddock        = @hardtop@/inplace/bin/haddock
 
+hsc2hs         = @hardtop@/inplace/bin/hsc2hs
+
 ld             = @LdCmd@
 ar             = @ArCmd@
 alex           = @AlexCmd@
