docs: Fix ghc_config.py.in

--- a/docs/users_guide/ghc_config.py.in
+++ b/docs/users_guide/ghc_config.py.in
@@ -6,4 +6,4 @@ extlinks = {
     'ghc-wiki': ('http://ghc.haskell.org/trac/ghc/wiki/%s', 'Trac #'),
 }
 
-version = @GhcVersion@
+version = '@GhcVersion@'
