Build system: add mk/validate.mk.sample
Reviewers: austin, bgamari

Subscribers: erikd

Differential Revision: https://phabricator.haskell.org/D1303

	modified:   configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -1197,8 +1197,8 @@ echo ["\
 fi
 
 echo ["\
-   Building Sphinx HTML documentation : $BUILD_SPHINX_HTML
-   Building Sphinx PDF documentation  : $BUILD_SPHINX_PDF"]
+   Tools to build Sphinx HTML documentation available: $BUILD_SPHINX_HTML
+   Tools to build Sphinx PDF documentation available: $BUILD_SPHINX_PDF"]
 
 echo ["----------------------------------------------------------------------
 "]
