--- a/.gitignore
+++ b/.gitignore
@@ -86,8 +86,11 @@ _darcs/
 /compiler/ghc.cabal.old
 /distrib/configure.ac
 /distrib/ghc.iss
+/docs/man
 /docs/index.html
+/docs/users_guide/users_guide
 /docs/users_guide/ghc.1
+/docs/users_guide/*.xml
 /docs/users_guide/*.gen.rst
 /docs/users_guide/ghc_config.py
 /docs/users_guide/ghc_config.pyc
